force-app/main/default/objects/EdFund_Facilites__c/fields/Job_classifications_included_in_bargain__c.field-meta.xml
<CustomField>
    <fullName>Job_classifications_included_in_bargain__c</fullName>
    <description>Job classifications included in the bargaining unit</description>
    <inlineHelpText>The Appendix A lists wage increases for 3 job classification only.</inlineHelpText>
    <label>Job classifications included in bargain</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Activities Aides</fullName>
            </value>
            <value>
                <fullName>Activities Assistant</fullName>
            </value>
            <value>
                <fullName>Activity Aide</fullName>
            </value>
            <value>
                <fullName>Activity Assistant</fullName>
            </value>
            <value>
                <fullName>Beautician</fullName>
            </value>
            <value>
                <fullName>Bus Person</fullName>
            </value>
            <value>
                <fullName>C.N.A.</fullName>
            </value>
            <value>
                <fullName>C.N.A. (RCFE)</fullName>
            </value>
            <value>
                <fullName>C.N.A. (SNF)</fullName>
            </value>
            <value>
                <fullName>C.N.A. (Traditional)</fullName>
            </value>
            <value>
                <fullName>Care Partner</fullName>
            </value>
            <value>
                <fullName>Care Partners Uncertified Assistive Personnel</fullName>
            </value>
            <value>
                <fullName>Caregivers</fullName>
            </value>
            <value>
                <fullName>Casual and per diem Certified Nursing Assistants</fullName>
            </value>
            <value>
                <fullName>Casual employees</fullName>
            </value>
            <value>
                <fullName>Central Service Tech</fullName>
            </value>
            <value>
                <fullName>Central Supplies Coordinator</fullName>
            </value>
            <value>
                <fullName>Central Supply</fullName>
            </value>
            <value>
                <fullName>Central Supply Aide/Function</fullName>
            </value>
            <value>
                <fullName>Central Supply Clerk</fullName>
            </value>
            <value>
                <fullName>Central Supply Employees</fullName>
            </value>
            <value>
                <fullName>Certified Aide</fullName>
            </value>
            <value>
                <fullName>Certified Nursing</fullName>
            </value>
            <value>
                <fullName>Certified Nursing Assistants &amp; Best Friends</fullName>
            </value>
            <value>
                <fullName>Clerical</fullName>
            </value>
            <value>
                <fullName>Clerk</fullName>
            </value>
            <value>
                <fullName>CNA/Medication</fullName>
            </value>
            <value>
                <fullName>CNA/Restorative</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>