force-app/main/default/objects/EdFund_Facilites__c/fields/Number_01__c.field-meta.xml
<CustomField>
    <fullName>Number_01__c</fullName>
    <label>Number 01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>