force-app/main/default/objects/EdFund_Facilites__c/fields/Number_02__c.field-meta.xml
<CustomField>
    <fullName>Number_02__c</fullName>
    <label>Number 02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>