force-app/main/default/objects/EdFund_Facilites__c/fields/Number_03__c.field-meta.xml
<CustomField>
    <fullName>Number_03__c</fullName>
    <label>Number 03</label>
    <length>255</length>
    <type>Text</type>
</CustomField>