force-app/main/default/objects/EdFund_Facilites__c/fields/Option_A_Good_No_problem_language__c.field-meta.xml
<CustomField>
    <fullName>Option_A_Good_No_problem_language__c</fullName>
    <description>language</description>
    <inlineHelpText>language</inlineHelpText>
    <label>Option A, Good - No problem language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>