force-app/main/default/objects/EdFund_Facilites__c/fields/Option_B_Good_Stipend__c.field-meta.xml
<CustomField>
    <fullName>Option_B_Good_Stipend__c</fullName>
    <description>Language</description>
    <inlineHelpText>Language</inlineHelpText>
    <label>Option B, Good - Stipend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>