force-app/main/default/objects/EdFund_Facilites__c/fields/Option_C_Good_Medi_Cal_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Option_C_Good_Medi_Cal_Caregiver__c</fullName>
    <description>Training AB1629/ In Service Training CEU’s</description>
    <inlineHelpText>Training AB1629/ In Service Training CEU’s</inlineHelpText>
    <label>Option C, Good - Medi-Cal Caregiver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>