force-app/main/default/objects/EdFund_Facilites__c/fields/Option_D_Good_Local_Advisory__c.field-meta.xml
<CustomField>
    <fullName>Option_D_Good_Local_Advisory__c</fullName>
    <description>Committee</description>
    <inlineHelpText>Committee</inlineHelpText>
    <label>Option D, Good - Local Advisory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>