force-app/main/default/objects/EdFund_Facilites__c/fields/Option_E_Good_Unilateral_Range__c.field-meta.xml
<CustomField>
    <fullName>Option_E_Good_Unilateral_Range__c</fullName>
    <label>Option E, Good - Unilateral Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>