force-app/main/default/objects/EdFund_Facilites__c/fields/Option_F_Good_Sunset_Clause__c.field-meta.xml
<CustomField>
    <fullName>Option_F_Good_Sunset_Clause__c</fullName>
    <label>Option F, Good – Sunset Clause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>