force-app/main/default/objects/EdFund_Facilites__c/fields/Option_G_Good_CBA_extension__c.field-meta.xml
<CustomField>
    <fullName>Option_G_Good_CBA_extension__c</fullName>
    <label>Option G, Good – CBA extension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>