force-app/main/default/objects/EdFund_Facilites__c/fields/Probationary_Introductory_Period__c.field-meta.xml
<CustomField>
    <fullName>Probationary_Introductory_Period__c</fullName>
    <label>Probationary / Introductory Period</label>
    <length>30</length>
    <type>Text</type>
</CustomField>