force-app/main/default/objects/EdFund_Facilites__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.07</fullName>
            </value>
            <value>
                <fullName>0.08</fullName>
            </value>
            <value>
                <fullName>1%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>