force-app/main/default/objects/EdFund_Facilites__c/fields/Special_circumstances__c.field-meta.xml
<CustomField>
    <fullName>Special_circumstances__c</fullName>
    <label>Special circumstances</label>
    <type>TextArea</type>
</CustomField>