force-app/main/default/objects/EdFund_Facilites__c/fields/Sub_Contractor_3__c.field-meta.xml
<CustomField>
    <fullName>Sub_Contractor_3__c</fullName>
    <label>Sub Contractor 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>