force-app/main/default/objects/EdFund_Facilites__c/fields/Subcontractor__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor__c</fullName>
    <label>Subcontractor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>HCSG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>