force-app/main/default/objects/EdFund_Facilites__c/fields/Will_the_facility_hire_CNAs_upon_passing__c.field-meta.xml
<CustomField>
    <fullName>Will_the_facility_hire_CNAs_upon_passing__c</fullName>
    <description>the state exam and availability of C.N.A. license numbers?</description>
    <inlineHelpText>the state exam and availability of C.N.A. license numbers?</inlineHelpText>
    <label>Will the facility hire CNAs upon passing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Indicated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>