force-app/main/default/objects/EdFund_Facilites__c/fields/X1_month_of_contribution_received__c.field-meta.xml
<CustomField>
    <fullName>X1_month_of_contribution_received__c</fullName>
    <label>1 month of contribution received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>