force-app/main/default/objects/EdFund_Facilites__c/fields/X2_months_of_contributions_received__c.field-meta.xml
<CustomField>
    <fullName>X2_months_of_contributions_received__c</fullName>
    <description>(Schedule Meet &amp; Greet)</description>
    <inlineHelpText>(Schedule Meet &amp; Greet)</inlineHelpText>
    <label>2 months of contributions received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>